fixed sizes, added footer box, changed aside box, main content still not left aligned

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -9,41 +9,40 @@ body {
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
     background-color: rgb(0 110 182 / 1);
     padding: 0.5rem;
     color: #fff;
 }
 
 p {
-    text-align: center;
+    text-align: left;
 }
 
 nav {
-    margin: 0 auto 2rem;
-    max-width: 90vw;
+    margin: 0 auto;
 }
 
 main {
-    margin: 1rem;
+    margin: 0 auto;
     text-align: left;
-    border: 1px solid rgb(0 0 0 / .2);
-    padding: 1rem;
+    border: 2px solid rgb(0 0 0 / .2);
+    padding: 10rem;
     background-color: #eee;
 }
 
 aside {
-    width: 40%;
-    padding: 0.5rem;
+    width: 30%;
+    padding: 2rem;
     margin: 0.5rem;
-    #box-shadow: inset 5px 0 5px -5px #29627e;
     float: right;
     font-style: italic;
     color: #29627e;
 }
 
-aside > p {
-    margin: -0.5rem;
+aside>p {
+    padding: 5rem;
+    #margin: -2rem;
     background-color: yellow;
 }
 
@@ -74,5 +73,9 @@ aside > p {
 }
 
 footer {
-    
+    padding: 1rem;
+    text-align: left;
+    color: #fff;
+    background-color: rgb(0 110 182 / 1);
+    border: 2px solid rgb(0 0 0 / .2);
 }
